--- a/app/index.html
+++ b/app/index.html
@@ -283,14 +283,25 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4"></div>
-            <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
+
           </div>
           <div class="product-item product-item--sale">
             <div class="product-item__img-box">
@@ -316,14 +327,25 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4.5"></div>
-            <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="3.5"></div>
+                <h4 class="product-item__title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
+
           </div>
           <div class="product-item">
             <div class="product-item__img-box">
@@ -349,14 +371,25 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="5"></div>
-            <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
+
           </div>
           <div class="product-item product-item--sale">
             <div class="product-item__img-box">
@@ -382,14 +415,25 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4"></div>
-            <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
+
           </div>
           <div class="product-item">
             <div class="product-item__img-box">
@@ -415,14 +459,25 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4.5"></div>
-            <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
+
           </div>
           <div class="product-item product-item--sale">
             <div class="product-item__img-box">
@@ -448,16 +503,25 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="0.5"></div>
-            <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
-
         </div>
         <a class=" product__link" href="#">
           load more
