--- a/app/404-page.html
+++ b/app/404-page.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/404-page.min.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/404-page.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
+  </head>
 
-<body>
+  <body>
 
- <header class="header">
+    <header class="header">
   <div class="container">
     <div class="header__inner">
       <a class="logo" href="#">
         <img class="logo__img" src="images/logo.png" alt="logo">
       </a>
       <nav class="menu">
+      <button class="menu__btn">
+      <span></span>
+      </button>
         <ul class="menu__list">
           <li class="menu__item">
             <a class="menu__link menu__link--active" href="#">home</a>
@@ -55,28 +59,28 @@
   </div>
 </header>
 
-  <main class="main">
-    <section class="page-404">
-      <div class="container">
-        <div class="page-404__inner">
-          <div class="page-404__content">
-            <h2 class="page-404__title">OPPS! Page Not Found!!</h2>
-            <p class="page-404__text">
+    <main class="main">
+      <section class="page-404">
+        <div class="container">
+          <div class="page-404__inner">
+            <div class="page-404__content">
+              <h2 class="page-404__title">OPPS! Page Not Found!!</h2>
+              <p class="page-404__text">
               We,re sorry but we can’t seem to find the pages you request. This might be because
               you have typed the web address not
               find incorrectly.
             </p>
-            <a class="page-404__link" href="#">
+              <a class="page-404__link" href="#">
               back to home
             </a>
+            </div>
+            <img class="page-404__img" src="images/404.png" alt="404">
           </div>
-          <img class="page-404__img" src="images/404.png" alt="404">
         </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
- <footer class="footer">
+    <footer class="footer">
   <div class="container">
     <div class="footer-top">
       <div class="footer__item footer-top__contact">
@@ -219,7 +223,7 @@
   </div>
 </footer>
 
-  <script src="js/main.min.js"></script>
-</body>
+    <script src="js/main.min.js"></script>
+  </body>
 
 </html>
