--- a/app/register.html
+++ b/app/register.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/register.min.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/login.min.css">
+  </head>
 
-<body>
+  <body>
 
- <header class="header">
+    <header class="header">
   <div class="container">
     <div class="header__inner">
       <a class="logo" href="#">
         <img class="logo__img" src="images/logo.png" alt="logo">
       </a>
       <nav class="menu">
+      <button class="menu__btn">
+      <span></span>
+      </button>
         <ul class="menu__list">
           <li class="menu__item">
             <a class="menu__link menu__link--active" href="#">home</a>
@@ -55,9 +58,9 @@
   </div>
 </header>
 
-  <main class="main">
-   
-  <section class="top">
+    <main class="main">
+
+        <section class="top">
       <div class="top__container" style="background-image: url('images/top-bg.jpg');">
         <div class="container">
           <h2 class="top__title title">log in</h2>
@@ -79,40 +82,40 @@
       </div>
     </section>
 
-    <section class="modal">
-      <div class="container">
-        <div class="modal__links">
-          <a class="modal__link modal__link--active" href="#">register</a>
-          <a class="modal__link" href="#">login</a>
-        </div>
-        <form class="modal__form" action="#">
-          <label class="modal__label">
+      <section class="modal">
+        <div class="container">
+          <div class="modal__links">
+            <a class="modal__link modal__link--active" href="#">register</a>
+            <a class="modal__link" href="#">login</a>
+          </div>
+          <form class="modal__form" action="#">
+            <label class="modal__label">
             Username or email address*
             <input class="modal__input" type="text" required>
-          </label>
-          <label class="modal__label">
+            </label>
+            <label class="modal__label">
             Password*
             <input class="modal__input" type="password" required>
-          </label>
-          <p class="modal__text">
+            </label>
+            <p class="modal__text">
             A password will be sent to your email address.
           </p>
-          <p class="modal__text">
+            <p class="modal__text">
             Your personal data will be used to support your experience throughout this website, to manage access to your
             account,
             and for other purposes described in our privacy policy.
           </p>
-          <label class="modal__label">
-            <input type="checkbox">
+            <label class="modal__label">
+              <input type="checkbox">
             Agree with Terms & Conditions
           </label>
-          <button class="modal__btn" type="submit">register</button>
-        </form>
-      </div>
-    </section>
-  </main>
+            <button class="modal__btn" type="submit">register</button>
+          </form>
+        </div>
+      </section>
+    </main>
 
-<footer class="footer">
+    <footer class="footer">
   <div class="container">
     <div class="footer-top">
       <div class="footer__item footer-top__contact">
@@ -255,7 +258,7 @@
   </div>
 </footer>
 
-  <script src="js/main.min.js"></script>
-</body>
+    <script src="js/main.min.js"></script>
+  </body>
 
 </html>
